@startuml
interface ReportStrategy {
  + generarReporte(Orden orden): void
}

class ReporteMembretadoStrategy {
  + generarReporte(Orden orden): void
}

class ReporteSinMembreteStrategy {
  + generarReporte(Orden orden): void
}

class ReporteConvenioStrategy {
  + generarReporte(Orden orden): void
}

class OrdenService {
  + generarImpresion(Orden orden, ReportStrategy strategy): void
}

ReportStrategy <|.. ReporteMembretadoStrategy : implementa
ReportStrategy <|.. ReporteSinMembreteStrategy : implementa
ReportStrategy <|.. ReporteConvenioStrategy : implementa

OrdenService --> ReportStrategy : utiliza
note right of OrdenService : Patrón Strategy\npara generar diferentes\ntipos de reportes PDF.
@enduml
